[tool.poetry]
name = "raindropio"
version = "0.1.0"
description = ""
authors = ["noreyb <disce_uno@yahoo.co.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
isort = "^5.13.2"
black = "^24.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
